# todo-app-api

./: .env.example  .gitignore  Dockerfile  Dockerfile.local  README.md  ServerlessApp.yaml  compose.yaml  openapi.json  openapi.py  pyproject.toml  requirements.txt
app/: config.py  dependencies.py  main.py
app/core/: handler.py  logging.py  security.py
app/crud/: task.py  task_dynamodb.py
app/database/: database.py  daynamodb.py
app/models/: task.py
app/routers/: task.py
app/schemas/: error.py  task.py  user.py
app/services/: task.py
db/dynamodb/: task_seed.json  task_table.json
tests/: conftest.py
tests/routers/: test_task.py
