[tool.poetry]
name = "todo-app-api"
version = "0.1.0"
description = ""
authors = ["uuuta"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
boto3 = "^1.35.87"
mangum = "^0.19.0"
pydantic-settings = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
